fix overlaps #3

--- a/src/blocks/form.blocks/common.blocks/add-plan/__steps/__steps.less
+++ b/src/blocks/form.blocks/common.blocks/add-plan/__steps/__steps.less
@@ -12,6 +12,9 @@
   padding-bottom: 21px;
 
   margin-bottom: 10px;
+  .step {
+    width: 100%;
+  }
 
   .tablet({
     .radius(30px,30px,30px,30px);
@@ -33,6 +36,10 @@
 
     position: relative;
     z-index: 13;
+    .step {
+      width: auto;
+      margin-right: 7px;
+    }
   });
 
   &__title {
