--- a/src/blocks/form.blocks/common.blocks/add-plan/add-plan.less
+++ b/src/blocks/form.blocks/common.blocks/add-plan/add-plan.less
@@ -6,7 +6,7 @@
 
   margin-top: -60px;
   padding-top: 29px;
-  padding-bottom: 192px;
+  padding-bottom: 43px;
   z-index: 13;
   position: relative;
 
