--- a/src/blocks/form.blocks/desktop.blocks/add-plan/add-plan.less
+++ b/src/blocks/form.blocks/desktop.blocks/add-plan/add-plan.less
@@ -6,7 +6,7 @@
     margin-top: -95px;
     padding-left: 0;
     padding-right: 0;
-    padding-bottom: 227px;
+    padding-bottom: 73px;
 
     .radius(60px,60px);
 
