--- a/src/blocks/form.blocks/form.less
+++ b/src/blocks/form.blocks/form.less
@@ -20,3 +20,26 @@
     display: none;
   });
 }
+
+.footer {
+  margin-top: 0;
+  z-index: unset;
+
+  &::before {
+    content: "";
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    background-color: @add-plan-bg-color;
+    z-index: -1;
+  }
+
+  .tablet({
+    margin-top: 0;
+  });
+
+  .desktop({
+    margin-top: 0;
+  });
+}
